Add recipe links on index.html page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 <body>
   <h1>Odin Recipes</h1>
+  <ul>
+    <li><a href="/recipes/burrito.html">Chorizo Breakfast Burritos</a></li>
+    <li><a href="/recipes/lasagna.html">Hearty Vegetable Lasagna</a></li>
+    <li><a href="/recipes/risotto.html">Zucchini Risotto</a></li>
+  </ul>
 </body>
 
 </html>
