Add basic CSS styling

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/style.css">
   <title>Odin Recipes</title>
 </head>
 
 <body>
-  <h1>Odin Recipes</h1>
-  <ul>
+  <h1 id="odin-recipes">Odin Recipes</h1>
+  <ul id="odin-recipes-links">
     <li><a href="/recipes/burrito.html">Chorizo Breakfast Burritos</a></li>
     <li><a href="/recipes/lasagna.html">Hearty Vegetable Lasagna</a></li>
     <li><a href="/recipes/risotto.html">Zucchini Risotto</a></li>
