--- a/recipes/burrito.html
+++ b/recipes/burrito.html
@@ -1,5 +1,7 @@
-<h1>Chorizo Breakfast Burritos</h1>
-<img src="/images/breakfast-burrito.jpeg" alt="A breakfast burrito">
+<link rel="stylesheet" href="/style.css">
+
+<h1 class="recipe-name">Chorizo Breakfast Burritos</h1>
+<img class="images" src="/images/breakfast-burrito.jpeg" alt="A breakfast burrito">
 
 <h2>Description</h2>
 <p>A yummy breakfast burrito using chorizo sausage, great for when you're craving greasy breakfast food (or when you're
