--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,5 +1,7 @@
-<h1>Hearty Vegetable Lasagna</h1>
-<img src="/images/vegetable-lasagna.jpeg" alt="A vegetable lasagna">
+<link rel="stylesheet" href="/style.css">
+
+<h1 class="recipe-name">Hearty Vegetable Lasagna</h1>
+<img class="images" src="/images/vegetable-lasagna.jpeg" alt="A vegetable lasagna">
 
 <h2>Description</h2>
 <p>This hearty, vegetable filled lasagna will keep you coming back for more!</p>
