--- a/recipes/risotto.html
+++ b/recipes/risotto.html
@@ -1,5 +1,7 @@
-<h1>Zucchini Risotto</h1>
-<img src="/images/zucchini-risotto.jpeg" alt="A zucchini risotto">
+<link rel="stylesheet" href="/style.css">
+
+<h1 class="recipe-name">Zucchini Risotto</h1>
+<img class="images" src="/images/zucchini-risotto.jpeg" alt="A zucchini risotto">
 
 <h2>Description</h2>
 <p>This creamy main dish gets a splash of color with the addition of zucchini, sun-dried tomatoes, and basil. With much
